Fix mobile version cutting off image

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     height: 100vh;
     background-color: #f3e5d7;
@@ -36,10 +36,11 @@ li {
 .container {
     max-width: 736px;
     background-color: white;
-    padding: 40px;
+    padding: 20px; /* Reduce padding if necessary */
     border-radius: 24px;
     text-align: left;
 }
+
 
 .content {
     display: flex;
